do-customer-service/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: customer-svc
  labels:
    app: customer-app
spec:
  selector:
    app: customer-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
